@@ -1,3 +1,10 @@
+Tue Aug 24 15:31:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * connectors/dds4ccm/impl/DDSPublisherListener_T.cpp:
+        * connectors/dds4ccm/impl/DDSSubscriberListener_T.cpp:
+        * connectors/dds4ccm/impl/DDS_Subscriber_Base_T.cpp:
+          Fixed memory leaks
+
 Tue Aug 24 15:10:36 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * connectors/dds4ccm/impl/DDS_Event_Connector_T.cpp:
